--- a/.github/workflows/send_message.yml
+++ b/.github/workflows/send_message.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Send Message
         shell: bash
         run: |
-          curl -X POST --data-urlencode "payload={\"channel\": \"#앱-테스트\", \"username\": \"테스트\", \"text\": \"테스트\"}"{% raw %}${{ secrets.SLACK_WEBHOOK_URL }}{% endraw %}
+          curl -X POST --data-urlencode 'payload={"channel": "#앱-테스트", "username": "테스트", "text": "테스트"}' ${{ secrets.SLACK_WEBHOOK_URL }}
