--- a/.github/workflows/delete_merged_branches.yml
+++ b/.github/workflows/delete_merged_branches.yml
@@ -12,6 +12,8 @@ jobs:
 
       - name: Delete Merged Branches
         shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
         run: |
           echo "Deleting merged branches"
           # Fetch all branches
