--- a/.github/workflows/delete_merged_branches.yml
+++ b/.github/workflows/delete_merged_branches.yml
@@ -8,12 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.CI_TOKEN }}
+      - name: Set up git user
+        run: |
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "${{ github.actor }}"
+    
       - name: Delete Merged Branches
         shell: bash
-        env:
-          GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
         run: |
           echo "Deleting merged branches"
           # Fetch all branches
