Refactor delete_merged_branches action to exclude specific branches and update branch deletion method

--- a/.github/workflows/dp_delete_branchs.yml
+++ b/.github/workflows/dp_delete_branchs.yml
@@ -25,7 +25,7 @@ jobs:
       
       - name: Get Merged Branches
         run: |
-          merged_branches=$(git branch -r --merged origin/main | grep -v '\->' | grep -v 'origin/main' | grep -v 'origin/master' | grep -v 'origin/dev')
+          merged_branches=$(git branch | grep -v "main\|dev\|feat/TSK1" | xargs git branch -d)
       
       - name: Delete Merged Branches
         run: |
