Refactor workflow file to update branch checkout and fetch commands

--- a/.github/workflows/dp_delete_branchs.yml
+++ b/.github/workflows/dp_delete_branchs.yml
@@ -18,7 +18,12 @@ jobs:
         run: |
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
           git config --global user.name "${{ github.actor }}"
-      
+
+      - name: Ceckout branch
+        run: |
+          git fetch --all
+          git checkout dev
+
       - name: Fetch all branches
         run: |
           git fetch --all
