병합된 브랜치 삭제 부분 call 로 분리

--- a/.github/workflows/dp_delete_branchs.yml
+++ b/.github/workflows/dp_delete_branchs.yml
@@ -18,25 +18,16 @@ jobs:
         run: |
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
           git config --global user.name "${{ github.actor }}"
-
-      - name: Ceckout branch
-        run: |
-          git fetch --all
-          git checkout dev
-
-      - name: Fetch all branches
-        run: |
-          git fetch --all
-      
-      - name: Get Merged Branches
-        id: get_merged_branches
-        run: |
-          merged_branches=$(git branch -r --merged | grep -v "origin/main\|origin/dev\|origin/HEAD" | sed 's/origin\///')
-          echo "merged_branches = $merged_branches"
-          echo "merged_branches=$merged_branches" >> $GITHUB_ENV
     
-      - name: Delete Merged Branches
-        run: |
-          for branch in ${{ env.merged_branches }}; do
-            git push origin --delete $branch
-          done
+      - name: Main Merged Branch Deletion
+        uses: ./call_delete_merged_branchs
+        with:
+          token: ${{ secrets.CI_TOKEN }}
+          from_branch_name: main
+              
+      - name: Dev Merged Branch Deletion
+        uses: ./call_delete_merged_branchs
+        with:
+          token: ${{ secrets.CI_TOKEN }}
+          from_branch_name: dev
+          
