--- a/.github/workflows/dp_delete_branchs.yml
+++ b/.github/workflows/dp_delete_branchs.yml
@@ -14,13 +14,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.CI_TOKEN }}
+          
       - name: Set up git user
         run: |
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
           git config --global user.name "${{ github.actor }}"
     
       - name: Main Merged Branch Deletion
-        uses: ./.github/workflows/call_delete_merged_branchs
+        uses: ./call_delete_merged_branchs
         with:
           token: ${{ secrets.CI_TOKEN }}
           from_branch_name: main
