--- a/.github/workflows/dp_delete_branchs.yml
+++ b/.github/workflows/dp_delete_branchs.yml
@@ -3,9 +3,7 @@ permissions:
   issues: write
   contents: write
 
-on:
-  workflow_dispatch:
-
+on: workflow_dispatch
 jobs:
   delete_merged_branches:
     runs-on: ubuntu-latest
@@ -14,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.CI_TOKEN }}
-          
+
       - name: Set up git user
         run: |
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
