Refactor dp_delete_branchs.yml to use absolute path for call_delete_merged_branchs workflow

--- a/.github/workflows/dp_delete_branchs.yml
+++ b/.github/workflows/dp_delete_branchs.yml
@@ -13,7 +13,7 @@ jobs:
   
 
   delete_main_merged_branchs:
-    uses: ./call_delete_merged_branchs
+    uses: ./.github/workflows/call_delete_merged_branchs
     with:
       from_branch_name: "main"
     secrets:
@@ -21,7 +21,7 @@ jobs:
 
   delete_dev_merged_branchs:
     needs: set_up
-    uses: ./call_delete_merged_branchs
+    uses: ./.github/workflows/call_delete_merged_branchs
     with:
       from_branch_name: "dev"
     secrets:
