--- a/.github/workflows/call_delete_merged_branchs.yml
+++ b/.github/workflows/call_delete_merged_branchs.yml
@@ -1,7 +1,6 @@
 name: Call delete merged branchs
 
 on: 
-  workflow_dispatch:
   workflow_call:
     inputs:
       from_branch_name:
@@ -12,6 +11,7 @@ on:
       CI_TOKEN:
         description: "CI_TOKEN to run whole jobs"
         required: true
+
 jobs:
   get-delete-target-branchs:
     name: Get delete target branchs
@@ -22,21 +22,20 @@ jobs:
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
           git config --global user.name "${{ github.actor }}"
 
-      - name: Ceckout branch
+      - name: Checkout branch
         run: |
           git fetch --all
-          git checkout ${{ github.event.inputs.from_branch_name }}
+          git checkout ${{ inputs.from_branch_name }}
 
       - name: Get delete target branchs
         id: get_delete_target_branchs
         run: |
           delete_target_branchs=$(git branch -r --merged | grep -v "origin/main\|origin/dev\|origin/HEAD" | sed 's/origin\///')
           echo "delete_target_branchs = $delete_target_branchs"
-          echo "${{ github.event.inputs.from_branch_name }}_delete_target_branchs=$delete_target_branchs" >> $GITHUB_ENV 
+          echo "${{ inputs.from_branch_name }}_delete_target_branchs=$delete_target_branchs" >> $GITHUB_ENV 
       
       - name: Delete Merged Branches
         run: |
           for branch in ${{ env.merged_branches }}; do
               git push origin --delete $branch
           done
- 
