--- a/.github/workflows/call_delete_merged_branchs.yml
+++ b/.github/workflows/call_delete_merged_branchs.yml
@@ -17,6 +17,11 @@ jobs:
     name: Get delete target branchs
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.CI_TOKEN }}
+  
       - name: Set up git user
         run: |
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
