--- a/.github/workflows/call_delete_merged_branchs.yml
+++ b/.github/workflows/call_delete_merged_branchs.yml
@@ -26,18 +26,17 @@ jobs:
         run: |
           git fetch --all
           git checkout ${{ inputs.from_branch_name }}
-          git pull origin ${{ inputs.from_branch_name }}
 
 
       - name: Get delete target branchs
         id: get_delete_target_branchs
         run: |
           delete_target_branchs=$(git branch -r --merged | grep -v "origin/main\|origin/dev\|origin/HEAD" | sed 's/origin\///')
-          echo "delete_target_branchs = $delete_target_branchs"
+          echo "delete_target_branchs=$delete_target_branchs"
           echo "${{ inputs.from_branch_name }}_delete_target_branchs=$delete_target_branchs" >> $GITHUB_ENV 
       
       - name: Delete Merged Branches
         run: |
-          for branch in ${{ env.merged_branches }}; do
+          for branch in ${{ inputs.from_branch_name }}_delete_target_branchs; do
               git push origin --delete $branch
           done
