--- a/.github/workflows/call_delete_merged_branchs.yml
+++ b/.github/workflows/call_delete_merged_branchs.yml
@@ -36,6 +36,6 @@ jobs:
       
       - name: Delete Merged Branches
         run: |
-          for branch in ${{ env.delete_target_branchs }}_delete_target_branchs }}; do
+          for branch in ${{ env.delete_target_branchs }} }}; do
               git push origin --delete $branch
           done
