Fix typo in delete job and correct branch reference

--- a/.github/workflows/call_delete_merged_branchs.yml
+++ b/.github/workflows/call_delete_merged_branchs.yml
@@ -32,10 +32,11 @@ jobs:
         id: get_delete_target_branchs
         run: |
           delete_target_branchs=$(git branch -r --merged | grep -v "origin/main\|origin/dev\|origin/HEAD" | sed 's/origin\///')
+          echo "find delete_target_branchs=$delete_target_branchs"
           echo "delete_target_branchs=$delete_target_branchs" >> $GITHUB_ENV 
       
       - name: Delete Merged Branches
         run: |
-          for branch in ${{ env.delete_target_branchs }} }}; do
+          for branch in ${{ env.delete_target_branchs }}; do
               git push origin --delete $branch
-          done
+          dones
