--- a/.github/workflows/call_delete_merged_branchs.yml
+++ b/.github/workflows/call_delete_merged_branchs.yml
@@ -27,6 +27,15 @@ jobs:
           git fetch --all
           git checkout ${{ inputs.from_branch_name }}
 
+      - name: 'Debug: List all branches'
+        run: |
+          echo "Listing all branches:"
+          git branch -a
+
+      - name: 'Debug: List merged branches'
+        run: |
+          echo "Listing merged branches:"
+          git branch -r --merged
 
       - name: Get delete target branchs
         id: get_delete_target_branchs
@@ -36,7 +45,8 @@ jobs:
           echo "delete_target_branchs=$delete_target_branchs" >> $GITHUB_ENV 
       
       - name: Delete Merged Branches
+        if : ${{ steps.get_delete_target_branchs.outputs.delete_target_branchs != '' }}
         run: |
-          for branch in ${{ env.delete_target_branchs }}; do
+          for branch in ${{ steps.get_delete_target_branchs.outputs.delete_target_branchs }}; do
               git push origin --delete $branch
           dones
