--- a/.github/workflows/call_delete_merged_branchs.yml
+++ b/.github/workflows/call_delete_merged_branchs.yml
@@ -45,11 +45,13 @@ jobs:
           echo "delete_target_branchs<<EOF" >> $GITHUB_ENV
           echo "$delete_target_branchs" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
+          echo "$$GITHUB_ENV"
       
       
       - name: Delete Merged Branches
         if: ${{ env.delete_target_branchs != '' }}
         run: |
           for branch in ${{ env.delete_target_branchs }}; do
-              git push origin --delete $branch
+            echo "Deleting branch $branch"
+            git push origin --delete $branch
           dones
