깃헙 액션 트리거, 디스패치 이외에 cron 추가에 따른 파일 이름 변경및 cron 적용

--- a/.github/workflows/delete_branchs.yml
+++ b/.github/workflows/delete_branchs.yml
@@ -1,7 +1,9 @@
 name: DP Delete Branches
 
-on: workflow_dispatch
-
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: "* * * * *" # every minute  (for test)
 jobs:
   set_up:
     runs-on: ubuntu-latest
