Refactor delete_branchs.yml to simplify workflow_dispatch and remove unnecessary cron schedule

--- a/.github/workflows/delete_branchs.yml
+++ b/.github/workflows/delete_branchs.yml
@@ -1,9 +1,6 @@
 name: DP Delete Branches
 
-on:
-  workflow_dispatch:
-  schedule:
-    - cron: "* * * * *" # every minute  (for test)
+on: workflow_dispatch
 jobs:
   set_up:
     runs-on: ubuntu-latest
